tests/js_error/source_locations/expression/binary/less_than_or_equal.exp
TypeError: symbol cannot be converted to number
  ┌ tests/js_error/source_locations/expression/binary/less_than_or_equal.js:1:3
  |
1 | 1 <= Symbol.iterator
  |   ^
Stack trace:
  at <global> (tests/js_error/source_locations/expression/binary/less_than_or_equal.js:1:3)